--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
   </head>
 
   <body>
-    
+    <%= render "layouts/navbar" %>
+    <%= render "layouts/alerts" %>
     <main class="container">
       <%= yield %>
     </main>
