--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,6 +9,12 @@
         <li class="nav-item">
           <%= link_to 'Home', root_path, class: "nav-link" %>
         </li>
+        <li class="nav-item">
+          <%= link_to 'Gallery', galleries_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Add new Gallery', new_gallery_path, class: "nav-link" %>
+        </li>
       </ul>      
       <ul class="navbar-nav">
           <%= render 'user/session_manager' %>
